@@ -22,6 +22,7 @@ FIX #318 L_NEW_CATEGORY en doublon pour certaines langues (P3ter)
 FIX #322 plxDate::getCalendar() ne retourne jamais L_SUNDAY (jerrywham, P3ter)
 FIX #323 La fonction plxUtils::printSelect ne fonctione pas avec un "selected" de type numérique (Philippe-M)
 FIX #324 Correction couleur des selecteurs si le theme du navigateur est inversé (sudwebdesign)
+FIX #326 Remplacement de "create_function()" déprécié depuis PHP 5.3 (faille et dégradation des performances) (P3ter)
 
 ## PLUXML 5.7 (sortie : 11/12/2018) ##
 
